# odoo_learn

./: .gitignore  .pdm-python  README.md  docker-compose.yml  gitman.yml  pyproject.toml  setup_env.sh
.github/: pull_request_template.md
.github/workflows/: test.yml
docs/: index.md
training/: __init__.py
training/delivery_aggregator/: README_SALES_INTEGRATION.md  __init__.py  __manifest__.py
training/delivery_aggregator/data/: delivery_cron.xml  delivery_sequence.xml
training/delivery_aggregator/demo/: demo.xml  demo_quotation_integration.xml  demo_sales_integration.xml  demo_tracking.xml
training/delivery_aggregator/models/: __init__.py  delivery_order.py  delivery_order_tracking.py  monthly_summary.py  sale_order_integration.py  wizard_delivery_assign.py  wizard_delivery_quotation.py
training/delivery_aggregator/security/: ir.model.access.csv  record_rules.xml
training/delivery_aggregator/tests/: __init__.py  test_delivery_order.py  test_delivery_tracking.py  test_monthly_summary.py  test_sale_order_integration.py  test_wizard_delivery_assign.py  test_wizard_delivery_quotation.py
training/delivery_aggregator/views/: delivery_order_tracking_views.xml  delivery_order_views.xml  monthly_summary_views.xml  sale_order_views.xml  wizard_delivery_quotation_views.xml
training/ffb_purchase/: USAGE.md  __manifest__.py
training/ffb_purchase/data/: purchase_daily_price_sequence.xml
training/ffb_purchase/models/: __init__.py  ffb_purchase_order.py  ffb_purchase_order_line.py  purchase_daily_price.py  purchase_pricing_config.py  wizard_calculation_details.py
training/ffb_purchase/security/: ir.model.access.csv
training/ffb_purchase/tests/: __init__.py  test_ffb_purchase_order.py  test_ffb_purchase_order_line.py  test_purchase_daily_price.py  test_purchase_pricing_config.py
training/ffb_purchase/views/: menu_views.xml  purchase_daily_price_views.xml  purchase_order_views.xml  purchase_pricing_config_views.xml  wizard_calculation_details_views.xml
training/sale_mill/: README.md  __init__.py  __manifest__.py
training/sale_mill/data/: ir_sequence_data.xml
training/sale_mill/models/: __init__.py  daily_price.py
training/sale_mill/security/: ir.model.access.csv  record_rules.xml
training/sale_mill/tests/: __init__.py  test_daily_price.py
training/sale_mill/views/: daily_price_views.xml  menu_views.xml
