[project]
name = "SawitProErp"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "sutanto62", email = "c@sutanto.or.id"},
    {name = "‘dianprasetyoo’", email = "‘dipra94@gmail.com’"},
]
dependencies = [
    "asn1crypto==1.4.0; python_version < \"3.11\"",
    "asn1crypto==1.5.1; python_version >= \"3.11\"",
    "Babel==2.9.1; python_version < \"3.11\"",
    "Babel==2.10.3; python_version >= \"3.11\"",
    "cbor2==5.4.2; python_version < \"3.12\"",
    "cbor2==5.6.2; python_version >= \"3.12\"",
    "chardet==4.0.0; python_version < \"3.11\"",
    "chardet==5.2.0; python_version >= \"3.11\"",
    "cryptography==3.4.8; python_version < \"3.12\"",
    "cryptography==42.0.8; python_version >= \"3.12\"",
    "decorator==4.4.2; python_version < \"3.11\"",
    "decorator==5.1.1; python_version >= \"3.11\"",
    "docutils==0.17; python_version < \"3.11\"",
    "docutils==0.20.1; python_version >= \"3.11\"",
    "freezegun==1.1.0; python_version < \"3.11\"",
    "freezegun==1.2.1; python_version >= \"3.11\"",
    "geoip2==2.9.0",
    "gevent==21.8.0; sys_platform != \"win32\" and python_version == \"3.10\"",
    "gevent==22.10.2; sys_platform != \"win32\" and python_version > \"3.10\" and python_version < \"3.12\"",
    "gevent==24.2.1; sys_platform != \"win32\" and python_version >= \"3.12\"",
    "greenlet==1.1.2; sys_platform != \"win32\" and python_version == \"3.10\"",
    "greenlet==2.0.2; sys_platform != \"win32\" and python_version > \"3.10\" and python_version < \"3.12\"",
    "greenlet==3.0.3; sys_platform != \"win32\" and python_version >= \"3.12\"",
    "idna==2.10; python_version < \"3.12\"",
    "idna==3.6; python_version >= \"3.12\"",
    "Jinja2==3.0.3; python_version <= \"3.10\"",
    "Jinja2==3.1.2; python_version > \"3.10\"",
    "libsass==0.20.1; python_version < \"3.11\"",
    "libsass==0.22.0; python_version >= \"3.11\"",
    "lxml==4.8.0; python_version <= \"3.10\"",
    "lxml==4.9.3; python_version > \"3.10\" and python_version < \"3.12\"",
    "lxml==5.2.1; python_version >= \"3.12\"",
    "lxml-html-clean; python_version >= \"3.12\"",
    "MarkupSafe==2.0.1; python_version <= \"3.10\"",
    "MarkupSafe==2.1.2; python_version > \"3.10\" and python_version < \"3.12\"",
    "MarkupSafe==2.1.5; python_version >= \"3.12\"",
    "num2words==0.5.10; python_version < \"3.12\"",
    "num2words==0.5.13; python_version >= \"3.12\"",
    "ofxparse==0.21",
    "openpyxl==3.0.9; python_version < \"3.12\"",
    "openpyxl==3.1.2; python_version >= \"3.12\"",
    "passlib==1.7.4",
    "Pillow==9.0.1; python_version <= \"3.10\"",
    "Pillow==9.4.0; python_version > \"3.10\" and python_version < \"3.12\"",
    "Pillow==10.2.0; python_version >= \"3.12\"",
    "polib==1.1.1",
    "psutil==5.9.0; python_version <= \"3.10\"",
    "psutil==5.9.4; python_version > \"3.10\" and python_version < \"3.12\"",
    "psutil==5.9.8; python_version >= \"3.12\"",
    "psycopg2==2.9.2; python_version == \"3.10\"",
    "psycopg2==2.9.5; python_version == \"3.11\"",
    "psycopg2==2.9.9; python_version >= \"3.12\"",
    "pyopenssl==21.0.0; python_version < \"3.12\"",
    "pyopenssl==24.1.0; python_version >= \"3.12\"",
    "PyPDF2==1.26.0; python_version <= \"3.10\"",
    "PyPDF2==2.12.1; python_version > \"3.10\"",
    "pypiwin32; sys_platform == \"win32\"",
    "pyserial==3.5",
    "python-dateutil==2.8.1; python_version < \"3.11\"",
    "python-dateutil==2.8.2; python_version >= \"3.11\"",
    "python-ldap==3.4.0; sys_platform != \"win32\" and python_version < \"3.12\"",
    "python-ldap==3.4.4; sys_platform != \"win32\" and python_version >= \"3.12\"",
    "python-stdnum==1.17; python_version < \"3.11\"",
    "python-stdnum==1.19; python_version >= \"3.11\"",
    "pytz",
    "pyusb==1.2.1",
    "qrcode==7.3.1; python_version < \"3.11\"",
    "qrcode==7.4.2; python_version >= \"3.11\"",
    "reportlab==3.6.8; python_version <= \"3.10\"",
    "reportlab==3.6.12; python_version > \"3.10\" and python_version < \"3.12\"",
    "reportlab==4.1.0; python_version >= \"3.12\"",
    "requests==2.25.1; python_version < \"3.11\"",
    "requests==2.31.0; python_version >= \"3.11\"",
    "rjsmin==1.1.0; python_version < \"3.11\"",
    "rjsmin==1.2.0; python_version >= \"3.11\"",
    "rl-renderPM==4.0.3; sys_platform == \"win32\" and python_version >= \"3.12\"",
    "urllib3==1.26.5; python_version < \"3.12\"",
    "urllib3==2.0.7; python_version >= \"3.12\"",
    "vobject==0.9.6.1",
    "Werkzeug==2.0.2; python_version <= \"3.10\"",
    "Werkzeug==2.2.2; python_version > \"3.10\" and python_version < \"3.12\"",
    "Werkzeug==3.0.1; python_version >= \"3.12\"",
    "xlrd==1.2.0; python_version < \"3.12\"",
    "xlrd==2.0.1; python_version >= \"3.12\"",
    "XlsxWriter==3.0.2; python_version < \"3.12\"",
    "XlsxWriter==3.1.9; python_version >= \"3.12\"",
    "xlwt==1.3.0",
    "zeep==4.1.0; python_version < \"3.11\"",
    "zeep==4.2.1; python_version >= \"3.11\"",
]
requires-python = "==3.12.*"
dynamic = ["classifiers"]
license = {text = "MIT"}
readme = "README.md"

[project.urls]
homepage = ""

[tool]
[tool.pdm]
distribution = false
source-includes = ["source/odoo"]

[tool.pdm.scripts]
odoo = "python source/odoo/odoo-bin -c odoo.conf --limit-memory-soft=0 --limit-memory-hard=0"
odoo-demo = "python source/odoo/odoo-bin -c odoo.conf --init delivery_aggregator --database test_demo_db --limit-memory-soft=0 --limit-memory-hard=0"
coverage-run = "coverage run --source=training source/odoo/odoo-bin -c odoo.conf --test-enable -d odoo -i delivery_aggregator,ffb_purchase,sale_mill --test-tags delivery_aggregator,ffb_purchase,sale_mill --stop-after-init"
coverage-html = "coverage html --directory htmlcov --include=training/* --omit=*/tests/*,*/test_*,*/__init__.py,*/__manifest__.py"

[tool.coverage.run]
source = ["training", "source/odoo"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
